Fix LeftDrawer content alignments

--- a/src/Components/Deepmech/Deepmech.css
+++ b/src/Components/Deepmech/Deepmech.css
@@ -3,3 +3,7 @@
     pointer-events: all;
     background-color: #000; /* NOTE #000c may be cool too */
 }
+
+.deepmechControl {
+    margin: 8px;
+}
